[package]
name = "tty"
version = "0.1.0"
authors = ["Michael van Niekerk <mvniekerk@chazaqdev.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tty"
path = "src/main.rs"

[dependencies]

actix = '0.10'
actix-identity = '0.3'
actix-rt = '1.1'
actix-web-actors = "3"
actix-codec = '0.3'
actix-http = '2'
actix-files = "0.5"

openssl = { version = "0.10" }
awc = "2"
actix-web = { version = '3', features = ["openssl"] }

clap = { version = "3.0.0-beta.2", features = ["yaml"] }

url = "2.1"
dotenv = "0.15.0"
env_logger = "0.8"
reqwest = { version = "0.10", features = ["json", "blocking"] }
log = "0.4"
serde_json = "1"
serde_derive = "1"
serde_with = "1"

simple-error = "0.2"

jsonwebtoken = "7"
biscuit = "0.5"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = '1.0'
features = ['derive']
